Fix sponsor images on mobile

--- a/assets/sass/components/_image.scss
+++ b/assets/sass/components/_image.scss
@@ -58,8 +58,3 @@
 			}
 		}
 	}
-
-
-.spnsors img{
-  width: 33%;
-}
